fix(console): add letter spacing for sign-in-experience title

--- a/packages/console/src/pages/SignInExperience/components/index.module.scss
+++ b/packages/console/src/pages/SignInExperience/components/index.module.scss
@@ -3,6 +3,7 @@
 .title {
   color: var(--color-neutral-variant-60);
   font: var(--font-subhead-cap);
+  letter-spacing: 0.1em;
   margin-top: _.unit(8);
 }
 
